--- a/templates/login.html
+++ b/templates/login.html
@@ -11,5 +11,5 @@
   </label>
   <button type="submit">Entrar</button>
 </form>
-<p>¿No tienes cuenta? <a href="{{ url_for('register') }}">Regístrate</a></p>
+<p>¿No tienes cuenta? <a href="{{ url_for('login.register') }}">Regístrate</a></p>
 {% endblock %}
