--- a/templates/register.html
+++ b/templates/register.html
@@ -17,5 +17,5 @@
   </label>
   <button type="submit">Registrarme</button>
 </form>
-<p>¿Ya tienes cuenta? <a href="{{ url_for('login') }}">Inicia sesión</a></p>
+<p>¿Ya tienes cuenta? <a href="{{ url_for('login.login') }}">Inicia sesión</a></p>
 {% endblock %}
