first exploration of auth implementation

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,9 @@
 {% block title %}Login{% endblock %}
 {% block content %}
 <h1>Iniciar Sesión</h1>
-<form method="post" class="form">
-  <label>Usuario o Email
-    <input type="text" name="username" required />
+<form id="login-form" class="form">
+  <label>Email
+    <input type="email" name="email" required />
   </label>
   <label>Contraseña
     <input type="password" name="password" required />
