--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -3,7 +3,7 @@
   <h1>{{ post.title }}</h1>
   <div class="meta">
     Por
-    <a href="{{ url_for('user.profile', username=post.user_id) }}">{{ post.user_id }}</a> | {{
+    <a href="{{ url_for('user.profile', username=post.user_id) }}">{{ post.username }}</a> | {{
     post.created_at.strftime('%Y-%m-%d %H:%M') }}
   </div>
   <div class="body">{{ post.content|replace('\n', '<br />')|safe }}</div>
