--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -3,38 +3,8 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.1.0/github-markdown.min.css"
 />
-<style>
-  .markdown-body {
-    padding: 1rem;
-    background: #fff;
-    color: #222;
-    border-radius: 6px;
-  }
 
-  .markdown-body pre {
-    background-color: #f6f8fa; /* igual que code */
-    color: #24292e; /* texto oscuro */
-    padding: 1em;
-    border-radius: 6px;
-    overflow-x: auto;
-  }
-
-  .markdown-body pre code {
-    background-color: #f2f2f2;
-    color: #24292e;
-    padding: 0.5em;
-    border-radius: 4px;
-    display: block;
-    overflow-x: auto;
-  }
-
-  .markdown-body code {
-    background-color: #f6f8fa;
-    color: #24292e;
-    padding: 0.2em 0.4em;
-    border-radius: 4px;
-  }
-</style>
+<link rel="stylesheet" href="{{ url_for('static', filename='markdown.css') }}" />
 
 <article class="post-detail">
   <h1>{{ post.title }}</h1>
