fix: error el user.profile espera username no user_id

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -16,7 +16,7 @@
 
   <div class="meta">
     Por
-    <a href="{{ url_for('user.profile', username=post.user_id) }}">{{ post.username }}</a> | {{
+    <a href="{{ url_for('user.profile', username=post.username) }}">{{ post.username }}</a> | {{
     post.created_at.strftime('%Y-%m-%d %H:%M') }}
   </div>
 
