--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,7 +1,6 @@
 {% extends 'layout.html' %} {% block title %}Editar Publicación{% endblock %} {% block content %}
 <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css" />
 <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
-
 <link rel="stylesheet" href="{{ url_for('static', filename='markdown.css') }}" />
 
 <h1>Editar Publicación</h1>
@@ -13,9 +12,11 @@
   <label>Contenido </label>
   <textarea id="markdown-editor" name="content" required>{{ post.content }}</textarea>
 
-  <button type="submit">Guardar</button>
+   <div class="actions">
+    <button type="submit">Guardar</button>
+    <a href="{{ url_for('post.post_detail', post_id=post.id) }}" class="btn-red">Cancelar</a>
+  </div>
 
-  <a href="{{ url_for('post.post_detail', post_id=post.id) }}">Cancelar</a>
 </form>
 
 <script>
